syntax = "proto3";

package a;
option go_package = ".;v1";

message UserInfo {
  string username = 1;
  int32 age = 2;
}