syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;inventory_pb";
// protoc -I ../../../gmicro/third_party/ -I . --go_out=. --go-grpc_out=. inventory.proto

service Inventory {
  rpc SetInv(GoodsInvInfo) returns (google.protobuf.Empty);   // 设置库存
  rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo);         // 获取库存信息
  rpc Sell(SellInfo) returns (google.protobuf.Empty);         // 库存扣减
  rpc Reback(SellInfo) returns (google.protobuf.Empty);       // 库存归还
}

message GoodsInvInfo {
  int64 goodsId = 1;
  int32 num = 2;
}

message SellInfo {
  repeated GoodsInvInfo goodsInfo = 1;
  string orderSn = 2;
}